feat: add stop-trying prompt for 'no' attempts

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
                 <button class="btn btn-no" id="noBtn">No</button>
             </div>
         </div>
-        <div class="success-message" id="successMessage">
+        <div class="popup-message" id="successMessage">
             <h1 class="celebration">🎉 YAAAY! 🎉</h1>
             <p class="message">I knew you'd say yes! 😍</p>
             <p class="emoji-rain">💖 💝 💕 💗 💓 💞 💘</p>
             <p class="excitement">This is the best day ever! Can't wait for our Valentine's date! 🥰</p>
+        </div>
+        <div class="popup-message" id="stopTryingMessage">
+            <h1 class="stop-trying-message">Stop playing with me 😡🔫</h1>
+            <img src="assets/images/angry-dog.jpg" />
         </div>
     </div>
     <script src="script.js"></script>
