--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will you be my Valentine? 💘</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <div class="prompt-card" id="promptCard">
-            <h1 class="question">Will you be my Valentine? 💝</h1>
-            <div class="button-container">
-                <button class="btn btn-yes" id="yesBtn">Yes! 💕</button>
-                <button class="btn btn-no" id="noBtn">No</button>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Will you be my Valentine? 💘</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div class="container">
+            <div class="prompt-card" id="promptCard">
+                <h1 class="question">Will you be my Valentine? 💝</h1>
+                <div class="button-container">
+                    <button class="btn btn-yes" id="yesBtn">Yes! 💕</button>
+                    <button class="btn btn-no" id="noBtn">No</button>
+                </div>
+            </div>
+            <div class="popup-message" id="successMessage">
+                <h1 class="celebration">🎉 YAAAY! 🎉</h1>
+                <p class="message">I knew you'd say yes! 😍</p>
+                <p class="emoji-rain">💖 💝 💕 💗 💓 💞 💘</p>
+                <p class="excitement">
+                    This is the best day ever! Can't wait for our Valentine's
+                    date! 🥰
+                </p>
+            </div>
+            <div class="popup-message" id="stopTryingMessage">
+                <h1 class="stop-trying-message">Stop playing with me 😡🔫</h1>
+                <img src="assets/images/angry-dog.jpg" />
             </div>
         </div>
-        <div class="popup-message" id="successMessage">
-            <h1 class="celebration">🎉 YAAAY! 🎉</h1>
-            <p class="message">I knew you'd say yes! 😍</p>
-            <p class="emoji-rain">💖 💝 💕 💗 💓 💞 💘</p>
-            <p class="excitement">This is the best day ever! Can't wait for our Valentine's date! 🥰</p>
-        </div>
-        <div class="popup-message" id="stopTryingMessage">
-            <h1 class="stop-trying-message">Stop playing with me 😡🔫</h1>
-            <img src="assets/images/angry-dog.jpg" />
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
 </html>
