--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Will you be my Valentine? 💘</title>
         <link rel="stylesheet" href="styles.css" />
+        <!-- Google tag (gtag.js) -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-G2MXZQW4VK"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-G2MXZQW4VK");
+        </script>
     </head>
     <body>
         <div class="container">
